--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,136 @@
-.App {
-  text-align: center;
+
+body{
+  background-color: #E5E5E5;
+}
+.home{
+  height: 200px;
+}
+.nav{
+  background-color: #101010;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.cards{
+  padding: 12px;
+}
+.card{
+  width: 1280px;
+height: 198px;
+
+left: calc(50% - 1280px/2);
+top: calc(50% - 198px/2 - 120px);
+
+background: #171717 !important;
+border-radius: 10px;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.img-prop{
+  margin: auto;
+  margin-left: 29px;
+  width: 296px;
+  height: 148px;
+  
+  
+
+  border-radius: 5px;
+}
+.text{
+ 
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 18px;
+line-height: 12px;
+
+color: #CFCFCF;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.tab-opt{
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 700;
+font-size: 18px;
+line-height: 22px;
+
+color: #FFFFFF;
+
 }
 
-.App-link {
-  color: #61dafb;
+.text2{
+  margin-right: 30px;
+  
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 12px;
+line-height: 15px;
+width: 250px;
+/* identical to box height */
+
+
+color: #FFFFFF;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.detail{
+  margin-top: 0px;
+  width: 475px;
+  margin-left:24px;
+  
+}
+
+.list{
+  width: 228px;
+height: 190px;
+
+background: #131313;
+border-radius: 15px;
+
+}
+
+.opt{
+  width: 168.45px;
+height: 37.5px;
+
+background: #232323;
+border-radius: 4.68775px;
+font-family: 'SF Pro Display';
+font-style: normal;
+font-weight: 400;
+font-size: 17px;
+line-height: 20px;
+
+color: #FFFFFF;
+}
+
+.opt-txt{
+  width: 222.45px;
+height: 40px;
+margin: auto;
+
+font-family: 'SF Pro Display';
+font-style: normal;
+font-weight: 400;
+font-size: 17px;
+line-height: 20px;
+
+color: #0a0707;
+}
+
+.states{
+  padding-top: 0px;
+
+  margin-top: 0px;
+  
+}
+
+.filter{
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 19px;
+
+/* Gray 6 */
+
+color: #FFFFFF;
 }
